--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -124,22 +124,14 @@
             android:id="@+id/pageTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/refreshBtn"
-            android:layout_toRightOf="@+id/navBtn"
             android:ellipsize="end"
             android:gravity="center"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="50dp"
             android:padding="3dp"
             android:singleLine="true"
             android:textSize="16sp"
             android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/refreshBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/selector_nav_refresh" />
     </RelativeLayout>
 
     <ImageView
