--- a/res/layout/external_link_warning_dialog.xml
+++ b/res/layout/external_link_warning_dialog.xml
@@ -13,6 +13,7 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
+        android:layout_marginLeft="10dp"
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +22,7 @@
         android:textSize="12sp" />
 
     <CheckBox
+        android:layout_marginLeft="10dp"
         android:id="@+id/dontShowCB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
