--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -138,7 +138,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
             android:layout_alignParentRight="true"
             android:src="@drawable/nav_favorites_off"
             />
