--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -122,15 +122,16 @@
 
         <TextView
             android:id="@+id/pageTitle"
+            android:layout_alignBottom="@+id/navBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_toRightOf="@+id/navBtn"
+			android:layout_toLeftOf="@+id/favoritesBtn"
+			android:gravity="center"
             android:ellipsize="end"
-            android:gravity="center"
             android:padding="3dp"
             android:singleLine="true"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageView
