Many layout changes, adding custom User Agent
Figuring out why api calls to the English wiki were returning 403 took
like 2 hours. Stupid feature is stupid.

--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -15,18 +15,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@drawable/bg_white"
-        >
-        
+        android:background="@drawable/bg_white" >
+
         <ImageView
             android:id="@+id/topBarBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:src="@drawable/bg_top_bar"
+            android:layout_alignParentTop="true"
             android:scaleType="matrix"
-            />
+            android:src="@drawable/bg_top_bar" />
 
         <ImageView
             android:id="@+id/logo"
@@ -34,69 +32,68 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:paddingTop="4dp"
-            android:src="@drawable/newlogo"
-            />
-        
+            android:src="@drawable/newlogo" />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/topBarBackground"
             android:layout_alignParentRight="true"
-                        android:layout_alignBottom="@+id/topBarBackground"
             android:layout_marginBottom="4dp"
-            android:layout_marginRight="4dp">
+            android:layout_marginRight="4dp" >
 
-        <ProgressBar
-            android:id="@+id/spinner"
-            style="@android:style/Widget.ProgressBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="5dp"
-            android:layout_toLeftOf="@+id/cancelSearchBtn"
-			android:layout_centerVertical="true"
-            android:indeterminate="true"
-            android:visibility="gone" />
-
-        <ImageView
-            android:id="@+id/cancelSearchBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-			android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            android:layout_toLeftOf="@+id/searchLayout"
-            android:src="@drawable/nav_cancel"
-            android:visibility="invisible" />
-
-        <RelativeLayout
-            android:id="@+id/searchLayout"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/shape_search_box" >
-
-            <EditText
-                android:id="@+id/searchET"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/searchBtn"
-                android:background="#00000000"
-                android:textSize="20sp"
-                android:hint="@string/hint_search"
-                android:imeOptions="actionSearch|flagNoExtractUi"
-                android:inputType="textCapSentences|textNoSuggestions"
-                android:padding="4dp"
-                android:singleLine="true" />
-
-            <ImageButton
-                android:id="@+id/searchBtn"
+            <ProgressBar
+                android:id="@+id/spinner"
+                style="@android:style/Widget.ProgressBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:background="#00000000"
-                android:src="@drawable/ic_action_search" />
-        </RelativeLayout>
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="4dp"
+                android:layout_toLeftOf="@+id/cancelSearchBtn"
+                android:indeterminate="true"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/cancelSearchBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@+id/searchLayout"
+                android:src="@drawable/nav_cancel"
+                android:visibility="invisible" />
+
+            <RelativeLayout
+                android:id="@+id/searchLayout"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/shape_search_box" >
+
+                <EditText
+                    android:id="@+id/searchET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/searchBtn"
+                    android:background="#00000000"
+                    android:hint="@string/hint_search"
+                    android:imeOptions="actionSearch|flagNoExtractUi"
+                    android:inputType="textCapSentences|textNoSuggestions"
+                    android:padding="4dp"
+                    android:singleLine="true"
+                    android:textSize="20sp" />
+
+                <ImageButton
+                    android:id="@+id/searchBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="#00000000"
+                    android:src="@drawable/ic_action_search" />
+            </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
 
@@ -125,8 +122,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/topBar"
-        android:background="@drawable/bg_nav_bar"
-        >
+        android:background="@drawable/bg_nav_bar" >
 
         <ImageView
             android:id="@+id/navBtn"
@@ -138,18 +134,17 @@
 
         <TextView
             android:id="@+id/pageTitle"
-            android:layout_alignBottom="@+id/navBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/navBtn"
+            android:layout_toLeftOf="@+id/favoritesBtn"
             android:layout_toRightOf="@+id/navBtn"
-			android:layout_toLeftOf="@+id/favoritesBtn"
-			android:gravity="center"
             android:ellipsize="end"
+            android:gravity="center"
             android:padding="3dp"
             android:singleLine="true"
             android:textColor="#FFFFFF"
-            android:textSize="22sp"
-            />
+            android:textSize="22sp" />
 
         <ImageView
             android:id="@+id/favoritesBtn"
@@ -165,14 +160,14 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_below="@+id/navBar"
-        android:layout_marginTop="-1dp" />
+        android:layout_marginTop="-6dp" />
 
     <WebView
         android:id="@+id/webContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="-6dp"
-        android:layout_below="@+id/navBar" />
+        android:layout_below="@+id/navBar"
+        android:layout_marginTop="-6dp" />
 
     <RelativeLayout
         android:id="@+id/webSpinnerLayout"
