--- a/res/layout/settings_activity.xml
+++ b/res/layout/settings_activity.xml
@@ -15,15 +15,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:padding="4dp"
-        android:background="#FFFFFF" >
+        android:background="@drawable/bg_white"
+        >
+        
+        <ImageView
+            android:id="@+id/topBarBackground"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/bg_top_bar"
+            android:scaleType="matrix"
+            />
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:src="@drawable/gw2logo_top" />
+            android:paddingTop="4dp"
+            android:src="@drawable/newlogo"
+            />
 
         <TextView
             android:id="@+id/title"
