--- a/res/layout/nav_menu_fragment.xml
+++ b/res/layout/nav_menu_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="180dp"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/shape_nav_menu"
     android:padding="5dp" >
 
