--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,20 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    
+        <style name="AppTheme" parent="android:Theme.Light" />
+    
+        <style name="Theme.Styled" parent="Theme.Sherlock.Light">
+        <item name="actionBarStyle">@style/Widget.Styled.ActionBar</item>
+        <item name="android:actionBarStyle">@style/Widget.Styled.ActionBar</item>
+        </style>
+        
+        <style name="Widget.Styled.ActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
+        <item name="displayOptions">showHome|useLogo</item>
+        <item name="background">@null</item>
+        <item name="android:background">@null</item>
+        <item name="backgroundSplit">@null</item>
+        <item name="android:backgroundSplit">@null</item>
+    </style>
 
 </resources>
