--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -57,5 +57,11 @@
         <item>Spanish</item>
         <item>French</item>
     </string-array>
+    <string-array name="Settings_wiki_langcodes">
+        <item>en</item>
+        <item>de</item>
+        <item>sp</item>
+        <item>fr</item>
+    </string-array>
 
 </resources>
