--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -60,7 +60,7 @@
     <string-array name="Settings_wiki_langcodes">
         <item>en</item>
         <item>de</item>
-        <item>sp</item>
+        <item>es</item>
         <item>fr</item>
     </string-array>
 
