--- a/res/menu/main_activity.xml
+++ b/res/menu/main_activity.xml
@@ -18,6 +18,12 @@
 	    android:showAsAction="always"
 	    />
 	
+	<item 
+	    android:id="@+id/share"
+	    android:title="Share"
+	    android:icon="@drawable/ic_action_share"
+	    android:showAsAction="always"/>
+	
 	
         
 </menu>
