--- a/res/layout/language_ab_item_portrait.xml
+++ b/res/layout/language_ab_item_portrait.xml
@@ -9,7 +9,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Guild Wars 2 Wiki"
+        android:text="@string/gw2w_name"
         android:textSize="14sp"
         android:textColor="#000000"
         />
