--- a/res/drawable/shape_web_spinner.xml
+++ b/res/drawable/shape_web_spinner.xml
@@ -3,7 +3,7 @@
         <padding android:left="14dp" android:top="4dp"
             android:right="14dp" android:bottom="4dp" />
     <corners android:radius="4dp" />
-    <solid android:color="#EEEEEE" />
+    <solid android:color="#EEEEEEEE" />
     <stroke android:color="#000000" android:width="1dp" />
 
 </shape>
