--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -98,6 +98,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/navBar"
         android:layout_marginTop="-6dp"
+        android:background="#EEEEEE"
         android:visibility="gone" />
 
 </RelativeLayout>
