--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,26 @@
-body {
+html, body {
 	font: 10pt/1.3em sans-serif;
+	margin: 0;
+}
+
+main {
+	display: block;
 	margin: .5em;
 }
 
+#android-category-list {
+	display: block;
+	box-sizing: border-box;
+	width: 100%;
+	margin-top: 1em;
+	padding: 1em;
+	color: #FFF;
+	background: #444;
+	text-align: center;
+	font-style: italic;
+}
+
+/* Adjustments */
 a {
 	color: #002BB8;
 	text-decoration: none;
