--- a/res/layout/no_favorites_dialog_view.xml
+++ b/res/layout/no_favorites_dialog_view.xml
@@ -10,6 +10,7 @@
         android:gravity="center"
         android:padding="5dp"
         android:text="@string/no_favorites_dialog_message"
+        android:textColor="#888888"
         android:layout_marginTop="10dp"
         android:textSize="16sp" />
     
